# metta-1

./: .cursorrules  AGENTS.md  __init__.py  adaptive_curriculum_results.json  environments.py  pyproject.toml  run_experiment.py  visualize_experiment.py
@daf/: adaptive_adaptive_controller.md  adaptive_dispatcher_local.md  adaptive_dispatcher_skypilot.md  adaptive_protocols.md  cogworks_curriculum___init__.md  cogworks_curriculum_curriculum.md  cogworks_curriculum_task_generator.md  common_test_support_pytest_shard.md  common_test_support_schema_isolation_functions.md  eval_analysis_config.md  eval_dashboard_data.md  gridworks_common.md  gridworks_configs_lsp.md  gridworks_routes_configs.md  modules_index.md  rl_advantage.md  rl_evaluate.md  rl_loss_loss.md  rl_loss_ppo.md  rl_mps.md  rl_rollout.md  rl_stats.md  rl_system_config.md  rl_training_checkpointer.md  rl_training_component.md  rl_training_component_context.md  rl_training_core.md  rl_training_distributed_helper.md  rl_training_experience.md  rl_training_gradient_reporter.md  rl_training_heartbeat.md  rl_training_optimizer.md  rl_training_progress_logger.md  rl_training_scheduler.md  rl_training_stats_reporter.md  rl_training_torch_profiler.md  rl_training_training_environment.md  rl_training_wandb_logger.md  rl_vecenv.md  rl_wandb.md  (+28 more)
@daf/structure/: METTA_REPOSITORY_STRUCTURE.md  integration_patterns.md  method_distribution.json
agent/: policy_store.py
configs/analyzer/: meta_analyzer.yaml  policy_analyzer.yaml
configs/env/: default.yaml
configs/eval/: simple.yaml
configs/experiments/: simple_test.yaml  test_experiment.yaml  test_multiagent.yaml
configs/hardware/: poplinux.yaml
configs/sweep/: full.yaml
daf/: .cursorrules  DAF_COMPREHENSIVE_UPDATES.md  METTA_INSTALLATION_README.md  README.md  __init__.py  adaptive_curriculum_results.json  daf_main.py  initialize_daf.py  pyproject.toml  setup.py
daf/@daf/: README.md  adaptive_adaptive_config.md  adaptive_models.md  adaptive_stores_wandb.md  adaptive_utils.md  cogworks_curriculum_curriculum_env.md  cogworks_curriculum_learning_progress_algorithm.md  cogworks_curriculum_stats.md  cogworks_curriculum_task_tracker.md  common_test_support_fixtures.md  eval_analysis.md  eval_eval_request_config.md  eval_eval_service.md  eval_eval_stats_db.md  gridworks_configs_registry.md  gridworks_routes_stored_maps.md  gridworks_server.md  map_terrain_from_numpy.md  modules_index.md  rl_checkpoint_manager.md  rl_loss_dynamics.md  rl_loss_ema.md  rl_loss_loss_config.md  rl_loss_sl_kickstarter.md  rl_loss_tl_kickstarter.md  rl_puffer_policy.md  rl_trainer.md  rl_trainer_config.md  rl_training_context_checkpointer.md  rl_training_evaluator.md  rl_training_monitor.md  rl_training_uploader.md  rl_training_wandb_aborter.md  rl_utils.md  setup_components_base.md  setup_components_codebot.md  setup_components_filter_repo.md  setup_components_githooks.md  setup_components_helm.md  setup_components_nodejs.md  (+24 more)
daf/configs/: metta_config.ini
daf/configs/base/: global.yaml
daf/configs/experiments/: arena_advanced.yaml  arena_basic.yaml  quick_test.yaml
daf/configs/profiles/: production.yaml  research.yaml
daf/doc/: ARCHITECTURE.md  DOCUMENTATION_PROCESS.md  DOCUMENTATION_SYSTEM.md  FUNCTIONALITY.md  INTEGRATION.md  PHILOSOPHY.md  README.md  REAL_METTA_VALIDATION.md  SUMMARY.md  TESTING.md  USER_GUIDE.md
daf/docs/: QUICKSTART.md
daf/examples/: actual_gif_generator.py  adaptive_curriculum_example.py  analysis_notebook_example.py  comprehensive_example.py  comprehensive_training_with_outputs.py  curriculum_demo.py  end_to_end_simulation.py  full_metta_training_demo.py  gif_generator.py  interactive_marimo_analysis.py  metta_visualization_master.py  programmatic_usage.py  real_metta_simulation_runner.py  real_simulation_data_generator.py  rl_training.py  rl_training_example.py  simple_metta_usage.py  visualization_comprehensive.py  visualization_generation_demo.py
daf/rl_training_output/: experiment_config.json  training_results.json
daf/scripts/: README.md  __init__.py  final_validation.py  generate_replay_gif.py  install.py  metta_example_runner.py  simple_daf_demo.py
daf/src/daf/: __init__.py  main.py
daf/src/daf/cli/: __init__.py  daf_cli.py  install.py  main.py  run.py  validate.py
daf/src/daf/config/: __init__.py  configuration.py  daf_config.py  models.py  profiles.py  validation.py
daf/src/daf/core/: __init__.py  adaptive_controller.py  curriculum_manager.py  engine.py  installation.py  logging.py  output.py  rl_trainer.py  simulation.py  validation.py
daf/src/daf/examples/: output_manager.py
daf/src/daf/logging/: __init__.py  daf_logger.py  log_manager.py
daf/src/daf/operations/: __init__.py  docs.py  examples.py  setup.py  tests.py  validation.py
daf/src/daf/setup/: __init__.py  daf_setup.py
daf/src/daf/tools/: __init__.py  comprehensive_generator.py  replay_generator.py  replay_to_gif.py  sync_with_metta.py  verify_coverage.py  visualization_generator.py
daf/src/daf/validation/: __init__.py  real_usage.py
daf/src/daf/wrappers/: __init__.py  metta_wrapper.py
daf/tests/: __init__.py  conftest.py
daf/tests/fixtures/: __init__.py  sample_adaptive_results.json  sample_config.json
daf/tests/integration/: __init__.py  test_daf_end_to_end.py  test_daf_metta_orchestration.py  test_daf_pipeline.py  test_daf_real_execution.py  test_daf_uv_metta_execution.py  test_metta_integration.py
daf/tests/unit/: __init__.py  test_configuration.py  test_daf_configuration.py  test_daf_core_components.py  test_daf_documentation.py  test_daf_functional.py  test_daf_thin_orchestration.py  test_daf_wrappers.py  test_operations.py  test_output.py  test_real_metta_usage.py  test_simulation.py
environments/: __init__.py  environments.py
experiments/: __init__.py  experiments.py
explore/: collective_value.md  install_dependencies.sh  multiagent_explore.md  multiagent_utils.py  pop_os_setup.sh  run_metta.sh
policies/: __init__.py
rl/eval/: queries.py  (+1 more)
rl_training_output/: experiment_config.json  training_results.json
tools/: eval.py  max_reward_calc.py
(+91 files in other folders)
